--- a/src/app/admin/components/admin-panel/admin-panel.component.html
+++ b/src/app/admin/components/admin-panel/admin-panel.component.html
@@ -18,6 +18,9 @@
     </mat-nav-list>
   </mat-sidenav>
 
-  <router-outlet></router-outlet>
+  <div class="main">
+    <router-outlet></router-outlet>
+  </div>
+
 
 </mat-sidenav-container>
