--- a/src/app/admin/components/edit/movie-edit/movie-edit.component.html
+++ b/src/app/admin/components/edit/movie-edit/movie-edit.component.html
@@ -36,7 +36,7 @@
         Save
       </button>
       <button mat-raised-button
-              color="warn"
+              color="accent"
               style="margin-right:5px"
               (click)="deleteMovie()">
         <i class="fas fa-trash-alt"></i>
