--- a/src/app/admin/components/movie-table/movie-table.component.html
+++ b/src/app/admin/components/movie-table/movie-table.component.html
@@ -1,1 +1,48 @@
-<p>movie-table works!</p>
+Table retrieving Movies through HTTP
+<div class="container mat-elevation-z8">
+  <div class="loading-shade"
+       *ngIf="isLoadingResults || isRateLimitReached">
+    <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
+    <div class="rate-limit-reached" *ngIf="isRateLimitReached">
+      MovieFinder's API rate limit has been reached. It will be reset in one minute.
+    </div>
+  </div>
+
+  <div class="table-container">
+
+    <table mat-table [dataSource]="data" class="table"
+           matSort matSortActive="created" matSortDisableClear matSortDirection="desc">
+      <!-- ID Column -->
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef>id</th>
+        <td mat-cell *matCellDef="let mov">{{mov.id}}</td>
+      </ng-container>
+
+      <!-- Title Column -->
+      <ng-container matColumnDef="title">
+        <th mat-header-cell *matHeaderCellDef>Title</th>
+        <td mat-cell *matCellDef="let mov">{{mov.title}}</td>
+      </ng-container>
+
+      <!-- Category Column -->
+      <ng-container matColumnDef="category">
+        <th mat-header-cell *matHeaderCellDef>Category</th>
+        <td mat-cell *matCellDef="let mov">{{mov.category}}</td>
+      </ng-container>
+
+      <!-- releaseDate Column -->
+      <ng-container matColumnDef="releaseDate">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>
+          Release Date
+        </th>
+        <td mat-cell *matCellDef="let mov">{{mov.releaseDate | date}}</td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  </div>
+
+  <mat-paginator [length]="resultsLength" [pageSize]="8"></mat-paginator>
+</div>
+
