add buf fixes and improvements to admin module

--- a/src/app/admin/components/dashboard/dashboard.component.html
+++ b/src/app/admin/components/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="actions">
   <button mat-raised-button
-          [routerLink]="['/admin/edit', 0]"
+          [routerLink]="['/admin/movies/edit', 0]"
           color="accent">
           <i class="fas fa-plus"></i>
         Add New Movie
