--- a/src/app/admin/components/edit/movie-edit-tags/movie-edit-tags.component.html
+++ b/src/app/admin/components/edit/movie-edit-tags/movie-edit-tags.component.html
@@ -1,6 +1,19 @@
 <form novalidate autocomplete="off">
   <fieldset>
-        <legend>Movie Search Tags</legend>
+        <legend>More Movie Info</legend>
+
+        <p>
+          <label>Pick Release Date:</label>
+          <span style="display: flex;">
+            <input id="releaseDate"
+                   name="releaseDate"
+                   placeholder="Release Date"
+                   [matDatepicker]="picker"
+                   [(ngModel)]="movie.releaseDate">
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+          </span>
+        </p>
 
         <p>
             <label>Category:</label>
@@ -24,9 +37,22 @@
             </span>
         </p>
 
-        <p class="flex-container">
+        <p>
+          <label>Select MPAA rating:</label>
+          <app-select-input
+            [options] = "['PG-13', 'R', 'K-17', 'K-13', 'PG-13', 'A-18', 'NC-17', 'PG', 'K-16', 'K-8', 'K-12']"
+            [(option)]="movie.mpaa">
+          </app-select-input>
+          <span class="invalid-feedback">
+            <span *ngIf="!movie.mpaa">
+                    Please select MPAA rating.
+            </span>
+          </span>
+        </p>
+
+        <p>
             <label>Search Tags:</label>
-              <span class="tag">
+              <span style="display: flex;">
                     <input id="tagsId"
                          type="text"
                          placeholder="Search keywords separated by commas"
@@ -36,13 +62,11 @@
                          #tagVar="ngModel"
                          [ngClass]="{'is-invalid': (tagVar.touched || tagVar.dirty || movie.id !== 0) && !tagVar.valid }" />
                     <button
-                        class="btn"
-                        title="Add the entered search tags"
+                        mat-icon-button
                         (click)="addTags()">
-                       Add
+                        <mat-icon>add</mat-icon>
                     </button>
                 </span>
-
             <span class="invalid-feedback">
                 <span *ngIf="tagVar.errors?.minlength">
                     The search tag must be at least 3 characters in length.
