--- a/src/app/movie/components/movie-detail/movie-detail.component.scss
+++ b/src/app/movie/components/movie-detail/movie-detail.component.scss
@@ -7,6 +7,7 @@
     position: relative;
     img {
       height: calc(100vh - 68px);
+      width: 100%;
     }
     .btn {
       position: absolute;
