--- a/src/app/shared/components/movie-card/movie-card.component.html
+++ b/src/app/shared/components/movie-card/movie-card.component.html
@@ -1,13 +1,12 @@
 <div class="movie_card" id="bright">
   <div class="info_section">
     <div class="movie_header">
-      <img class="locandina" src="{{movie.imageurl}}" loading="lazy"/>
+      <img class="locandina" src="{{movie.imageurl || imgsrc}}" loading="lazy"/>
       <h1 [routerLink]="['/movies', movie.id]" class="title">{{movie.title}}</h1>
       <h4><span class="date">({{ movie.releaseDate | date}})</span> {{movie.director}}</h4>
       <span class="minutes">117 min</span>
       <p class="category">{{movie.category}}</p>
       <p class="mpaa">{{ movie.mpaa | uppercase }}</p>
-      <p class="type">{{ movie.price | currency:'USD':'symbol' }}</p>
     </div>
     <div class="movie_desc">
       <p class="text">
@@ -27,5 +26,5 @@
         </button>
     </div>
   </div>
-  <div class="blur_back" [ngStyle]="{'background-image': 'url(' + movie.imageurl + ')'}"></div>
+  <div class="blur_back" [ngStyle]="{'background-image': 'url(' + (movie.imageurl || imgsrc) + ')'}"></div>
 </div>
