--- a/src/app/admin/components/edit/movie-edit-tags/movie-edit-tags.component.css
+++ b/src/app/admin/components/edit/movie-edit-tags/movie-edit-tags.component.css
@@ -7,9 +7,9 @@ input {
   height: 40px;
   padding: 0 5px;
   font-size: 17px;
-  border: 1px solid #3F51B5;
+  border: 1px solid #5452FF;
   color: white;
-  background: #424242;
+  background: #5C6664;
   -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
   -moz-box-sizing: border-box;    /* Firefox, other Gecko */
   box-sizing: border-box;
@@ -24,50 +24,20 @@ input.is-invalid:focus {
 outline: none;
 }
 
-
-
-* {
-box-sizing: border-box;
-}
-
-.flex-container {
-display: flex;
-flex-direction: column;
-}
-
-span.tag input[type=text] {
-float: left;
-width: 80%;
-}
-
-
-span.tag button {
-float: left;
-width: 20%;
-height: 40px;
-min-width: 50px;
-padding: 10px;
-background: #3F51B5;
-color: white;
-font-size: 17px;
-border: 1px solid #3F51B5;
-border-left: none;
-cursor: pointer;
-}
-
-
-span.tag button:hover {
-background: rgba(63, 81, 181, 0.726);
-}
-
-span.tag::after {
-content: "";
-clear: both;
-display: table;
-}
-
-
 .invalid-feedback{
    color: rgb(233, 57, 57);
    font-size: 12px;
+}
+
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: #9da3a2;
+  opacity: 1; /* Firefox */
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+  color: #9da3a2;
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+  color: #9da3a2;
 }
