--- a/src/app/admin/components/movie-table/movie-table.component.css
+++ b/src/app/admin/components/movie-table/movie-table.component.css
@@ -1,13 +1,12 @@
 /* Structure */
 .container {
   position: relative;
-  min-height: 200px;
 }
 
 .table-container {
   position: relative;
-  max-height: 500px;
   overflow: auto;
+  height: calc(100vh - 230px);
 }
 
 table {
@@ -41,4 +40,12 @@ table {
 
 .mat-column-created {
   max-width: 124px;
+}
+
+tr.mat-header-row {
+  background-color: #212121;
+}
+
+td.mat-cell, th.mat-header-cell{
+  padding-left: 8px;
 }
