add http server search

--- a/src/app/admin/components/dashboard/dashboard.component.html
+++ b/src/app/admin/components/dashboard/dashboard.component.html
@@ -11,6 +11,7 @@
           <i class="fas fa-pencil-alt"></i>
         Edit Movies
   </button>
+  <app-async-search class="search" (searchChange)="onSearch($event)"></app-async-search>
 </div>
 
 <div class="cards">
