--- a/src/app/admin/components/dashboard/dashboard.component.scss
+++ b/src/app/admin/components/dashboard/dashboard.component.scss
@@ -20,9 +20,15 @@
 }
 
 .actions{
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
   button {
     margin-bottom: 10px;
     margin-right: 10px;
+  }
+  .search {
+    width: 400px;
   }
 }
 
