--- a/src/app/admin/components/movie-table/movie-table.component.css
+++ b/src/app/admin/components/movie-table/movie-table.component.css
@@ -1,13 +1,30 @@
-/* Structure */
+.head {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.search{
+  width: 400px;
+}
+
+
 .container {
   position: relative;
-  height: calc(100vh - 230px);
+  height: calc(100vh - 260px);
 }
 
 .table-container {
   position: relative;
   overflow: auto;
-  height: calc(100vh - 230px);
+  height: calc(100vh - 260px);
+}
+
+@media screen and (max-width: 680px) {
+  .table-container, .container {
+    height: calc(100vh - 350px);
+  }
 }
 
 table {
@@ -33,7 +50,6 @@ table {
   text-align: center;
 }
 
-/* Column Widths */
 .mat-column-number,
 .mat-column-state {
   max-width: 64px;
