--- a/src/app/auth/components/forgot/forgot.component.html
+++ b/src/app/auth/components/forgot/forgot.component.html
@@ -10,7 +10,7 @@
       <span class="info">Enter the email address associated with your account and we'll send instructions on how to reset your password.</span>
       <mat-form-field appearance="outline" color="warn">
         <mat-label class="label">Recovery Email </mat-label>
-        <input type="string"
+        <input type="text"
                matInput
                placeholder="type your email"
                formControlName="email" />
