--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -8,7 +8,7 @@
     <p>
       <mat-form-field appearance="outline" color="warn">
         <mat-label class="label">Username</mat-label>
-        <input type="string"
+        <input type="text"
                matInput
                placeholder="type your username"
                formControlName="username" />
@@ -21,8 +21,7 @@
     <p>
       <mat-form-field appearance="outline" color="warn">
         <mat-label class="label">Password</mat-label>
-        <input type="password"
-               matInput
+        <input matInput
                placeholder="type your password"
                formControlName="password"
                [type]="hidePassword ? 'text' : 'password'" />
